fix(accordion, data-list, page): add padding to child of expandable parent to fix overflow bug. (#1477)

--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -68,14 +68,14 @@
   --pf-c-page__sidebar--ZIndex: var(--pf-global--ZIndex--sm);
   --pf-c-page__sidebar--Width: 80%;
   --pf-c-page__sidebar--md--Width: #{pf-size-prem(290px)};
-  --pf-c-page__sidebar--PaddingTop: var(--pf-global--spacer--md);
-  --pf-c-page__sidebar--PaddingBottom: var(--pf-global--spacer--md);
   --pf-c-page__sidebar--BackgroundColor: var(--pf-global--BackgroundColor--light-100);
   --pf-c-page__sidebar--BoxShadow: var(--pf-global--BoxShadow--lg-right);
   --pf-c-page__sidebar--Transition: var(--pf-global--Transition);
   --pf-c-page__sidebar--Transform: translate3d(-100%, 0, 0);
   --pf-c-page__sidebar--m-expanded--Transform: translate3d(0, 0, 0);
   --pf-c-page__sidebar--md--Transform: translate3d(0, 0, 0);
+  --pf-c-page__sidebar-body--PaddingTop: var(--pf-global--spacer--md);
+  --pf-c-page__sidebar-body--PaddingBottom: var(--pf-global--spacer--md);
 
   @media screen and (min-width: $pf-global--breakpoint--md) {
     --pf-c-page__sidebar--Width: var(--pf-c-page__sidebar--md--Width); // hardcode sidebar based on design spec, must match pf-n-nav--Width
@@ -271,8 +271,6 @@
   grid-column-start: 1;
   z-index: var(--pf-c-page__sidebar--ZIndex);
   width: var(--pf-c-page__sidebar--Width);
-  padding-top: var(--pf-c-page__sidebar--PaddingTop);
-  padding-bottom: var(--pf-c-page__sidebar--PaddingBottom);
   overflow-x: hidden;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
@@ -301,6 +299,11 @@
       overflow: hidden;
     }
   }
+}
+
+.pf-c-page__sidebar-body {
+  padding-top: var(--pf-c-page__sidebar-body--PaddingTop);
+  padding-bottom: var(--pf-c-page__sidebar-body--PaddingBottom);
 }
 
 // Main
